--- a/index.html
+++ b/index.html
@@ -27,11 +27,23 @@
 		<main>
 			<div class="table">
 				<div class="player">
-					<span>Jugador 1</span>
+					<section>
+						<span>Jugador 1 </span> <small>victorias - 0</small>
+					</section>
+					<section>
+						<div class="cartas">
+							<img src="/assets/img/AS.png" alt="As" />
+						</div>
+					</section>
 				</div>
 
 				<div class="player">
-					<span>Oponente</span>
+					<section><span>Oponente</span> <small>victorias - 0</small></section>
+					<section>
+						<div class="cartas">
+							<img src="/assets/img/AS.png" alt="As" />
+						</div>
+					</section>
 				</div>
 			</div>
 		</main>
