--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="/assets/css/style.css" />
+		<script defer src="/assets/js/juego.js"></script>
 		<title>BlackJack</title>
 	</head>
 	<body>
@@ -33,6 +34,8 @@
 					<section>
 						<div class="cartas">
 							<img src="/assets/img/AS.png" alt="As" />
+							<img src="/assets/img/AS.png" alt="As" />
+							<img src="/assets/img/AS.png" alt="As" />
 						</div>
 					</section>
 				</div>
@@ -41,7 +44,9 @@
 					<section><span>Oponente</span> <small>victorias - 0</small></section>
 					<section>
 						<div class="cartas">
-							<img src="/assets/img/AS.png" alt="As" />
+							<img src="/assets/img/red_back.png" alt="As" />
+							<img src="/assets/img/red_back.png" alt="As" />
+							<img src="/assets/img/red_back.png" alt="As" />
 						</div>
 					</section>
 				</div>
