--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="/assets/css/style.css" />
+		<link href="/assets/img/favicon.ico" rel="icon" type="image/x-icon" />
 		<script src="/assets/js/underscore-min.js"></script>
 		<script defer src="/assets/js/juego.js"></script>
 		<title>BlackJack</title>
