--- a/index.html
+++ b/index.html
@@ -28,11 +28,16 @@
 			</div>
 		</header>
 		<main>
+			<div class="mensaje">
+				<h2>Instrucciones</h2>
+				<span>Presionar nuevo juego, pedir carta, llegar a 21 puntos</span>
+				<button id="mensajeb">Aceptar</button>
+			</div>
 			<div class="table">
 				<div class="player">
 					<section>
-						<p>Jugador 1 - <span id="puntos-jugador"> Puntos : 0 </span></p>
-						<small>victorias - 0</small>
+						<p>Jugador - <span id="puntos-jugador"> Puntos : 0 </span></p>
+						<small id="victoriaJug">victorias - 0</small>
 					</section>
 					<section>
 						<div class="cartas-jug"></div>
@@ -42,7 +47,7 @@
 				<div class="player">
 					<section>
 						<p>Oponente - <span id="puntos-oponente"> Puntos : 0 </span></p>
-						<small>victorias - 0</small>
+						<small id="victoriaOp">victorias - 0</small>
 					</section>
 					<section>
 						<div class="cartas-Op"></div>
